--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@
     padding-top: 20px;
     padding-bottom: 20px;
     font-size: 2em;
+    color: blanchedalmond;
 }
 
 @media screen and (max-width: 480px) {
