--- a/style.css
+++ b/style.css
@@ -1,16 +1,31 @@
 .main{
     margin:0 auto;
     border:rgb(253, 146, 5) solid 1px;
-    border-radius: 15px;
+    border-radius: 10px;
     width: 38%;
     padding: 20px;
     position: relative;
+    user-select: none;
+}
+/* .history{
+    margin: 50px;
+    position: absolute;
+    top: 0;
+    right:0;
+    width: 30%;
+    border: 1px solid black;
+
+} */
+
+hr{
+    margin-top: 90px;
 }
 .input{
    position: absolute;
    width: 88%;
    padding: 10px;
    font-size: 2em;
+   text-align: right;
 }
 .numbers{
     width: 25%;
@@ -18,6 +33,7 @@
     padding-top: 20px;
     padding-bottom: 20px;
     font-size: 2em;
+    margin-bottom: 0.5%;
 }
 .zero{
     width: 51%;
@@ -41,7 +57,7 @@
     padding-bottom: 20px;
     font-size: 2em;
     color: blanchedalmond;
-}
+  }
 
 @media screen and (max-width: 480px) {
     .main {
